# pifp-stellar

./: .gitignore  all_rs_files.txt  brace_count.txt  brace_count_new.txt  build_errors.txt  clippy_out.txt  keeper_test_out.txt  log.txt  ls_out.txt  oracle_check_out.txt  pr-description.md  rustc_nightly_out.txt  rustc_out.txt  rustup_out.txt  test_1.85_out.txt  test_fix_out.txt  test_out.txt  test_out_2.txt  test_out_3.txt  test_out_4.txt  test_out_5.txt  test_out_6.txt  test_out_7.txt  test_out_final.txt  test_out_verify.txt  test_out_verify_2.txt  test_out_verify_3.txt  test_out_verify_4.txt  test_out_verify_5.txt  test_out_verify_6.txt  test_out_verify_7.txt
backend/indexer/: Cargo.toml  README.md
backend/indexer/migrations/: 003_create_projects_table.sql  004_add_extra_data_to_events.sql
backend/indexer/src/: api.rs  config.rs  db.rs  events.rs  indexer.rs  main.rs  metrics.rs  rpc.rs
backend/oracle/src/: ipfs.rs  main.rs
contracts/pifp_protocol/src/: debug_test.rs  events.rs  fuzz_test.rs  invariants_checker.rs  lib.rs  storage.rs  test.rs  test_deadline.rs  test_errors.rs  test_events.rs  test_protocol_config.rs  test_refund.rs  test_utils.rs
contracts/pifp_protocol/test_snapshots/test/: test_register_project_success.1.json
