[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
description = "PIFP event indexer — streams Soroban on-chain events and exposes a REST API"
license = "MIT"

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
tokio-util = "0.7"
redis = { version = "0.27", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
